--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -159,7 +159,7 @@ sup {
 }
 
 a {
-  color: #4e73df;
+  color: #169b6b;
   text-decoration: none;
   background-color: transparent;
 }
@@ -9901,7 +9901,7 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-image: linear-gradient(180deg, #ff0004 10%, #224abe 100%);
   background-size: cover;
 }
 
