--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -9907,7 +9907,7 @@ a:focus {
 
 .bg-gradient-secondary {
   background-color: #858796;
-  background-image: linear-gradient(180deg, #858796 10%, #60616f 100%);
+  background-image: linear-gradient(180deg, #ff0004 10%, #60616f 100%);
   background-size: cover;
 }
 
@@ -10085,7 +10085,7 @@ a:focus {
 }
 
 .border-bottom-danger {
-  border-bottom: 0.25rem solid #e74a3b !important;
+  border-bottom: 0.25rem solid #e74a3b !important
 }
 
 .border-left-light {
